fix(import): prevent optimize getting stuck in the event of missing z… (#7747)
relates to OPT-7047